Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-8159

[Regression] QTabWidget documentMode not working correctly on Mac

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.6.1
    • None
    • None
    • MacOS X 10.5.8 on intel.
    • macOS
    • 4580c2e9c2bbcb911f9e1cecd4551054598d256d

      On Mac, QTabWidget with setDocumentMode(true) should be visually "unified" with the titlebar.

      Indeed, that is the very intention of the call to setDocumentMode. See this Qt Labs blog post (particularly the screenshot): http://labs.trolltech.com/blogs/2008/07/02/some-qtabbar-qtabwidget-love/

      Unfortunately, the tabs and window titlebar do not get "unified". I've tried the latest 4.5 and 4.6 versions, using both Carbon and Cocoa. Here is what it actually looks like: http://boxybutgood.com/~jeff/QTabWidget.png

      The problem happens both when you programatically set a QTabWidget as the QMainWindow's central widget and also when using Qt Designer. Interesting to note: when using Qt Designer, the PREVIEW mode displays the desired behavior! But when you actually use the class in your application, you get the non-unified appearance.

      Also, fwiw, setUnifiedTitleAndToolBarOnMac(true) has no effect on this.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cduclos Carlos Duclos (Inactive)
            strawtarget Jeff M
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes